        - The start date of the jobs depended on the hour the command "creme_job_manager" has started.
        - Some useless extra runs have been removed.
    # Apps :
        * Documents :
            - You could merge system folders & so, remove them.
        * Emails :
            - There were some issues when the default owner of synchronised emails is a team.


== Version 2.5.12 ==

  Users side :
  ------------
    # The confirmation message for definitive deletion in hat-bar brick has been fixed.
    # Apps :
        * Billing :
            - The layout of the TemplateBase detail-views has been fixed.
            - The inner-edition of TemplateBase instances bas been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # A crash when a function is used for default value of an enumerable FK has been fixed.


== Version 2.5.11 ==

  UPGRADE NOTE :
    - You should re-generate the media files (creme generatemedia --settings=[...]).

  Users side :
  ------------
    # Apps :
        * Emails :
            - In email synchronisation:
                - There was an error when accepting a fixed forwarded email.
                - The display of error, when using single actions (accept & delete), has been fixed.


== Version 2.5.10 ==

  UPGRADE NOTE :
    - You should re-generate the media files (creme generatemedia --settings=[...]).

  Users side :
  ------------
    # Images with an extension in uppercase (e.g. "my_pic.JPG") are correctly displayed now.
    # A scary log with fast pagination has been removed.
    # The setting SOFTWARE_LABEL in now used for the title of the login page.
    # A warning in the JavaScript console about Select2 & its locale has been removed.
    # Apps :
        * Geolocation :
            - A crash in the JavaScript code of blocks when the entity is deleted has been fixed.
        * Sketch :
            - The display of numbers between 5000 and 10000 has been improved.
